--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,11 @@ version = 0.1.0
 
 [options]
 packages = find:
+zip_safe = True
+include_package_data = True
+
+[options.package_data]
+testthepypi = *.html, *.ini, *.tar.gz, *.txt
 
 [options.entry_points]
 console_scripts =
