--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,20 @@
 
 [metadata]
 name = testthepypi
-version = 0.1.0
+version = attr: testthepypi.__version__
+author = DocGarbanzo
+url = https://github.com/DocGarbanzo/testthepypi
+description = Testing the PyPI
+long_description = file: README.md
+long_description_content_type = text/markdown
+keywords = testthepypi, setuptools
+license = MIT
+classifiers =
+    Programming Language :: Python :: 3
 
 [options]
 packages = find:
-zip_safe = True
+zip_safe = False
 include_package_data = True
 
 [options.package_data]
